--- a/frontend_webpages/templates/home.html
+++ b/frontend_webpages/templates/home.html
@@ -36,9 +36,10 @@
         </div>
         {% endfor %}
 
-        <div class="deck-card create-deck" onclick="alert('Create deck functionality coming soon!')">
+        <!-- Create New Deck Card -->
+        <div class="deck-card create-deck" data-toggle="modal" data-target="#createDeckModal" style="cursor: pointer;">
             <div class="create-deck-content">
-                <div class="create-deck-icon">+</div>
+                <div class="create-deck-icon" onclick="event.stopPropagation(); window.location.href='{{ url_for('createcard') }}'">+</div>
                 <h3>Create New Deck</h3>
                 <p style="color: var(--text-secondary); margin-top: 8px;">Start building your knowledge</p>
             </div>
@@ -51,7 +52,6 @@
     <div class="nav-item" onclick="alert('Statistics view coming soon!')">Stats</div>
     <div class="nav-item" onclick="alert('Settings coming soon!')">Settings</div>
 </div>
+
+
 {% endblock %}
-
-
-
