implimented deck creation

--- a/templates/create_card.html
+++ b/templates/create_card.html
@@ -1,6 +1,6 @@
 
 {% extends "base.html" %}
-{% block title %}GPT.SD - {{ deck.name }}{% endblock %}
+{% block title %}GPT.SD - My Decks {% endblock %}
 
 {% block content %}
 <div class="container active">
