--- a/templates/study.html
+++ b/templates/study.html
@@ -22,21 +22,38 @@
         {% if cards %}
         <div class="flashcard" id="flashcard" onclick="flipCard()">
             <div class="flashcard-face" id="front">
-                {% if cards[0].image_url %}
+              {% if cards[0].image_url %}
                 <img src="{{ cards[0].image_url }}" alt="{{ cards[0].term }}" class="flashcard-image">
-                {% endif %}
-                <div class="flashcard-content">
-                    <h3 id="termText">{{ cards[0].term }}</h3>
-                </div>
-                <div class="flashcard-hint">Click to reveal answer</div>
+              {% endif %}
+              <div class="flashcard-content">
+                <h3 id="termText">{{ cards[0].term }}</h3>
+              </div>
+          
+              <!-- ←– TTS button on the front –→ -->
+              <button class="tts-btn" onclick="event.stopPropagation(); speakTerm()" title="Read term aloud"> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="15" fill="purple" class="bi bi-soundwave" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8.5 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11a.5.5 0 0 1 .5-.5m-2 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5m4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5m-6 1.5A.5.5 0 0 1 5 6v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m8 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m-10 1A.5.5 0 0 1 3 7v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5m12 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5"/>
+                  </svg>
+            </button>
+        
+              <div class="flashcard-hint">Click to reveal answer</div>
             </div>
+          
             <div class="flashcard-face flashcard-back" id="back">
-                <div class="flashcard-content">
-                    <p id="definitionText">{{ cards[0].definition }}</p>
-                </div>
-                <div class="flashcard-hint">Click to flip back</div>
+              <div class="flashcard-content">
+                <p id="definitionText">{{ cards[0].definition }}</p>
+              </div>
+          
+              <!-- ←– TTS button on the back –→ -->
+              <button class="tts-btn" onclick="event.stopPropagation(); speakDefinition()" title="Read definition aloud">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="15" fill="purple" class="bi bi-soundwave" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8.5 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11a.5.5 0 0 1 .5-.5m-2 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5m4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5m-6 1.5A.5.5 0 0 1 5 6v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m8 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m-10 1A.5.5 0 0 1 3 7v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5m12 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5"/>
+                </svg>
+              </button>
+          
+              <div class="flashcard-hint">Click to flip back</div>
             </div>
-        </div>
+          </div>
 
         <div class="study-controls">
             <button class="control-btn control-btn-prev" onclick="previousCard()">Previous</button>
